    more straightforward now, more logical (variables have been moved to
    their proper package), more policy-compliant (gforge.conf is read and
    Debconf is initialised from it as much as possible), and it even
    actually seems to work.
  * [Christian] Added {cronolog_path} in httpd.conf.template, make it fill
    by gforge-config and removed dependancy on a specific cronolog version

 -- Roland Mas <lolando@debian.org>  Tue, 10 Jun 2003 12:09:21 +0200

gforge (3rc2-3) unstable; urgency=low

  * [Roland] Switched from non-US to main, so that the upload be accepted.

 -- Roland Mas <lolando@debian.org>  Wed, 21 May 2003 00:11:57 +0200

gforge (3rc2-2) unstable; urgency=low

  * [Roland] Added db/20030513.sql, to add an "enabled" column to the
    themes table.  Fixed register-theme accordingly, and wrote a new
    unregister-theme too (which just disables the theme).
  * [Christian] Updated French.tab contributed by Linac (Angouleme Lug)
    for Adullact <michel.bondaz@linac.org>.
  * [Roland] Applied patch #330 fixing LDAP schema.  Thanks, Alwyn
    Schoeman <alwyn@smart.com.ph>.
  * [Christian] Moved <name> theme in gforge-theme-<name> dir where name
    not gforge or osx.
  * [Roland] Fixed cvs_dump_update.pl so that it creates the homedirs for
    the anoncvs_* users when needed.
  * [Roland] Also fixed database user creation code.
  * [Roland] Depend on cronolog (>= 1.6.2-1), since the binary was
    relocated from /usr/sbin to /usr/bin in that version.
  * [Roland] Clean the source tree so as to be able to build a non-native
    Debian package.
  * [Roland] Restored initial debSfMailingList (Mailman 2.0 version) to
    the LDAP schema, and added the new debSfMailingListMM21 with OID
    1.3.6.1.4.1.9586.1.1.1.2.3 for Mailman 2.1.  Fixed sql2ldif.pl
    accordingly.

 -- Roland Mas <lolando@debian.org>  Tue, 20 May 2003 23:18:47 +0200

gforge (3rc2-1) unstable; urgency=low

  * [Christian] rc2 will go to unstable
