@@ -176,6 +176,8 @@ install: build
 
 	# gforge-lists-mailman
 	install -m 755 deb-specific/create-mailing-lists.pl $(CURDIR)/debian/gforge-lists-mailman/usr/lib/gforge/bin/
+	install -m 755 deb-specific/fix-mailing-lists.pl $(CURDIR)/debian/gforge-lists-mailman/usr/lib/gforge/bin/
+
 	# gforge-sourceforge-transition
 	install -m 755 deb-specific/install-db.sh $(CURDIR)/debian/gforge-sourceforge-transition/usr/lib/gforge-sourceforge-transition/bin/
 
